# sceptile

./: .gitignore  Dockerfile  README.md  __init__.py  interface.py  main.py  pyproject.toml  server.py
model/: __init__.py
scripts/: download_data.sh
